--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "array-move": "^4.0.0",
     "chroma-js": "^2.4.2",
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-material-ui-form-validator": "^3.0.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-sortable-hoc": "^2.0.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
